find and fix the deploy bug

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://IrinaSfv.github.io/search-for-books",
+  "homepage": "https://irinasfv.github.io/search-for-books",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
